--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "bundler"
     open-pull-requests-limit: 10 #Default 5
-    directory: "/contents/"
+    directory: "/"
     schedule:
       interval: "daily"
     vendor: true    
